--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="index.js"></script>
-</head>
-<body>
+    <script src="index.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
 
-    
-</body>
+        <button class="btn-rock">Rock</button>
+        <button class="btn-paper">Paper</button>
+        <button class="btn-scissors">Scissors</button>
+        
+    </div>
+  </body>
 </html>
